--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <style> body {padding: 0; margin: 0;} </style>
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico'/>
     <script src="libs/p5.js"></script>
+    <script src="libs/p5.sound.js"></script>
     <script src="src/sketch.js"></script>
   </head>
   <body>
