Expose terrain generator on sketch

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico'/>
     <script src="libs/p5.js"></script>
     <script src="libs/p5.sound.js"></script>
+    <script src="libs/terrain.js"></script>
+    <script src="config/config.js"></script>
     <script src="src/sketch.js"></script>
   </head>
   <body>
