--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Machine Grooving Studio</title>
-    <style> body {padding: 0; margin: 0;} </style>
+    <link rel="stylesheet" href="style.css">
     <link rel='shortcut icon' type='image/x-icon' href='assets/images/favicon.ico'/>
     <script src="libs/p5.js"></script>
     <script src="libs/p5.sound.js"></script>
-    <script src="libs/terrain.js"></script>
     <script src="config/config.js"></script>
+    <script src="libs/terrain.js"></script>
     <script src="src/sketch.js"></script>
   </head>
   <body>
+      <p>Machine Grooving Studio</p>
   </body>
 </html>
